--- a/p3_dinner_menu/index.html
+++ b/p3_dinner_menu/index.html
@@ -6,22 +6,34 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Dinner Menu</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/font.css">
     </head>
     <body>
-
+        <img class="head" src="image/cat_head.png">
         <div class="header"> 
         <h1>Grand Opening</h1>
         <h1>Ms. Duchess</h1>
         <h3>February 11th 2021 </h3>
         </div>
-
+          
+        <br>
         <div class="menu"> 
-           <h2>Appetize</h2> 
-
-           <h2>First Course</h2> 
+           <h2>Appetizer</h2> 
+             <h3>Trio of Rainbow Trout</h3>
+             <h5>with catnip custard, topped with tobiko and ikura</h5><br>
+           <h2>First Course</h2>
+             <h3>Meat Wellington </h3>
+             <h5>mouse meat rapped in pastery fused with chicken, topped with cat thyme </h5><br>
            <h2>Second Course</h2> 
+           <img class="cat" src="image/cat.png">
+             <h3>Pan Seared King Mackarel</h3>
+             <h5>topped with catnip and home-made sauce</h5><br>
            <h2>Dessert</h2> 
+             <h3>Oat Grass Roll Cake</h3>
+             <h5>with catnip and milk mouse inside</h5>
+
+             
 
 
         </div>
