--- a/p5_20_facts/index.html
+++ b/p5_20_facts/index.html
@@ -15,14 +15,14 @@
             <main id="content">
                 <div class="row">
                     <div class="block">
-                        <h1>20 Facts About De Javu</h1>
+                        <h1>20 Facts About DeJa Vu</h1>
                     </div>
                 </div>
                 <div class="row">
                     <div class="block">
                         <p>
                         1<br>
-                        De Javu is the feeling that one has lived through the present situation before
+                        DeJa Vu is the feeling that one has lived through the present situation before
                         </p>
                         <img class="mirror" src="image/mirror.jpg" alt="mirror">
                     </div>
