--- a/studio/p2/body5_inkwash.html
+++ b/studio/p2/body5_inkwash.html
@@ -9,10 +9,42 @@
         <link rel="stylesheet" href="css/font.css">
     </head>
     <body>
-
-
-
-
-        <div>A Japanese room might be likened to an inkwash painting, the paper-paneled shoji being the expanse where the ink is thinnest, and the alcove where it is darkest. Whenever I see the alcove of a tastefully built Japanese room, I marvel at our comprehension of the secrets of shadows, our sensitive use of shadow and light. For the beauty of the alcove is not the work of some clever device. An empty space is marked off with plain wood and plain walls, so that the light drawn into it forms dim shadows within emptiness. There is nothing more. And yet, when we gaze into the darkness that gathers behind the crossbeam, around the flower vase, beneath the shelves, though we know perfectly well it is mere shadow, we are overcome with the feeling that in this small corner of the atmosphere there reigns complete and utter silence; that here in the darkness immutable tranquility holds sway. The "mysterious Orient" of which Westerners speak probably refers to the uncanny silence of these dark places. And even we as children would feel an inexpressible chill as we peered into the depths of an alcove to which the sunlight had never penetrated. Where lies the key to this mystery? illtimately it is the magic of shadows. Were the shadows to be banished from its comers, the alcove would in that instant revert to mere void.</div>
+        <div class="wall">A Japanese room might be likened to an inkwash painting, 
+            the paper-paneled shoji being the expanse where the ink is thinnest, 
+            and the alcove where it is darkest. Whenever I see the alcove of a tastefully built Japanese room, 
+            I marvel at our comprehension of <span class="hole">the secrets of shadows</span>, our sensitive use of <span class="hole">shadow and light</span>. 
+            For the <span class="hole">beauty of the alcove</span> is not the work of some clever device. 
+            An empty space is marked off with plain wood and plain walls, 
+            so that <span class="hole">the light drawn into it forms dim shadows within emptiness</span>. 
+            There is nothing more. And yet, when we <span class="hole">gaze into the darkness that gathers behind the crossbeam</span>, 
+            around the flower vase, beneath the shelves, though we know perfectly well it is mere shadow, 
+            we are overcome with the feeling that in this small corner of the atmosphere there <span class="hole">reigns complete and utter silence</span>; 
+            that here in the darkness <span class="hole">immutable tranquility</span> holds sway. 
+            The "mysterious Orient" of which Westerners speak probably refers to the uncanny silence of these dark places. 
+            And even we as children would feel an inexpressible chill as we peered into the depths of an alcove to which the sunlight had never penetrated. 
+            Where lies the key to this mystery? illtimately it is the <span class="hole">magic of shadows</span>. 
+            Were the shadows to be banished from its comers, the alcove would in that instant revert to mere void.
+        </div>
+        <div class="door">
+            <a href="body2_room.html">Shadow <br></a>
+            <a href="body2_room.html">Alcove <br></a>
+            <a href="body6_gold.html">Gold leaf <br></a>
+        </div>
+        <div class="floor">A Japanese room might be likened to an inkwash painting, 
+            the paper-paneled shoji being the expanse where the ink is thinnest, 
+            and the alcove where it is darkest. Whenever I see the alcove of a tastefully built Japanese room, 
+            I marvel at our comprehension of <span class="light">the secrets of shadows</span>, our sensitive use of <span class="light">shadow and light</span>. 
+            For the <span class="light">beauty of the alcove</span> is not the work of some clever device. 
+            An empty space is marked off with plain wood and plain walls, 
+            so that <span class="light">the light drawn into it forms dim shadows within emptiness</span>. 
+            There is nothing more. And yet, when we <span class="light">gaze into the darkness that gathers behind the crossbeam</span>, 
+            around the flower vase, beneath the shelves, though we know perfectly well it is mere shadow, 
+            we are overcome with the feeling that in this small corner of the atmosphere there <span class="light">reigns complete and utter silence</span>; 
+            that here in the darkness <span class="light">immutable tranquility</span> holds sway. 
+            The "mysterious Orient" of which Westerners speak probably refers to the uncanny silence of these dark places. 
+            And even we as children would feel an inexpressible chill as we peered into the depths of an alcove to which the sunlight had never penetrated. 
+            Where lies the key to this mystery? illtimately it is the <span class="light">magic of shadows</span>. 
+            Were the shadows to be banished from its comers, the alcove would in that instant revert to mere void.
+        </div>
     </body>
 </html>
