--- a/studio/p2/body6_gold.html
+++ b/studio/p2/body6_gold.html
@@ -9,17 +9,48 @@
         <link rel="stylesheet" href="css/font.css">
     </head>
     <body>
-
-
-
-
-        <div>And surely you have seen, in the darkness of the innermost rooms of these huge buildings, to which sunlight never penetrates, how the gold leaf of a sliding door or screen will pick up a distant glimmer from the garden, then suddenly send forth an ethereal glow, a faint golden light cast into the enveloping darkness, like the glow upon the horizon at sunset. In no other setting is gold quite so exquisitely beautiful. You walk past, turning to look again, and yet again; and as you move away the golden surface of the paper glows ever more deeply, changing not in a flash, but growing slowly, steadily brighter, like color rising in the face of a giant. Or again you may find that the gold dust of the background, which until that moment had only a dull, sleepy luster, will, as you move past, suddenly gleam forth as if it had burst into flame.
-
-            How, in such a dark place, gold draws so much light to itself is a mystery to me. But I see why in ancient times statues of the Buddha were gilt with gold and why gold leaf covered the walls of the homes of the nobility. Modem man, in his well-lit house, knows nothing of the beauty of gold; but those who lived in the dark houses of the past were not merely captivated by its beauty, they also knew its practical value; for gold, in these dim rooms, must have served the function of a reflector. Their use of gold leaf and gold dust was not mere extravagance. Its reflective properties were put to use as a source of illumination. Silver and other metals quickly lose their gloss, but gold retains its brilliance indefinitely to light the darkness of the room. This is why gold was held in such incredibly high esteem.
-        </div> 
-        
-        <p class="gold_quote">
-            the gold leaf of a sliding door or screen will pick up a distant glimmer from the garden, then suddenly send forth an ethereal glow, a faint golden light cast into the enveloping darkness, like the glow upon the horizon at sunset.
-        </p>
+        <div class="wall">And surely you have seen, <span class="hole">in the darkness of the innermost rooms of these huge buildings</span>, 
+            to which sunlight never penetrates, how the <span class="hole">gold leaf</span> of a sliding door or screen will <span class="hole">pick up a distant glimmer from the garden</span>, 
+            then suddenly send forth <span class="hole">an ethereal glow, a faint golden light cast into the enveloping darkness</span>, 
+            <span class="hole">like the glow upon the horizon at sunset</span>. In no other setting is gold quite so exquisitely beautiful. 
+            You walk past, turning to look again, and yet again; 
+            and as you move away the golden surface of the paper glows ever more deeply, 
+            changing not in a flash, but growing slowly, steadily brighter, like color rising in the face of a giant. 
+            Or again you may find that the <span class="hole">gold dust</span> of the background, 
+            which until that moment had only a dull, sleepy luster, will, as you move past, suddenly gleam forth as if it had burst into flame.
+            How, in such a dark place, <span class="hole">>gold</span> draws so much light to itself is a mystery to me. 
+            But I see why in ancient times statues of the Buddha were gilt with gold and why gold leaf covered the walls of the homes of the nobility. 
+            Modem man, in his well-lit house, knows nothing of the beauty of gold; 
+            but those who lived in the dark houses of the past were not merely captivated by its beauty, they also knew its practical value; 
+            for gold, in these dim rooms, must have served the function of a reflector. 
+            Their <span class="hole">use of gold leaf and gold dust was not mere extravagance</span>. 
+            Its reflective properties were put to use as a source of illumination. 
+            Silver and other metals quickly lose their gloss, but gold retains its brilliance indefinitely to light the darkness of the room. 
+            This is why gold was held in such incredibly high esteem.
+        </div>
+        <div class="door">
+            <a href="body2_room.html">Shadow <br></a>
+            <a href="body2_room.html">Alcove <br></a>
+            <a href="body5_inkwash.html">Inkwash <br> painting <br></a>
+        </div>
+        <div class="floor">And surely you have seen, <span class="light">in the darkness of the innermost rooms of these huge buildings</span>, 
+            to which sunlight never penetrates, how the <span class="light">gold leaf</span> of a sliding door or screen will <span class="light">pick up a distant glimmer from the garden</span>, 
+            then suddenly send forth <span class="light">an ethereal glow, a faint golden light cast into the enveloping darkness</span>, 
+            <span class="light">like the glow upon the horizon at sunset</span>. In no other setting is gold quite so exquisitely beautiful. 
+            You walk past, turning to look again, and yet again; 
+            and as you move away the golden surface of the paper glows ever more deeply, 
+            changing not in a flash, but growing slowly, steadily brighter, like color rising in the face of a giant. 
+            Or again you may find that the <span class="light">gold dust</span> of the background, 
+            which until that moment had only a dull, sleepy luster, will, as you move past, suddenly gleam forth as if it had burst into flame.
+            How, in such a dark place, <span class="light">gold</span> draws so much light to itself is a mystery to me. 
+            But I see why in ancient times statues of the Buddha were gilt with gold and why gold leaf covered the walls of the homes of the nobility. 
+            Modem man, in his well-lit house, knows nothing of the beauty of gold; 
+            but those who lived in the dark houses of the past were not merely captivated by its beauty, they also knew its practical value; 
+            for gold, in these dim rooms, must have served the function of a reflector. 
+            Their <span class="light">use of gold leaf and gold dust was not mere extravagance</span>. 
+            Its reflective properties were put to use as a source of illumination. 
+            Silver and other metals quickly lose their gloss, but gold retains its brilliance indefinitely to light the darkness of the room. 
+            This is why gold was held in such incredibly high esteem.
+        </div>
     </body>
 </html>
