--- a/studio/p2/index.html
+++ b/studio/p2/index.html
@@ -9,12 +9,13 @@
         <link rel="stylesheet" href="css/font.css">
     </head>
     <body>
-        <img class="title" src="image/title.png" alt="title">
-        <img class="title2" src="image/title2.png" alt="title">
         In <br>
         Praise <br>
         of <br>
-        <a href="body.html">Shadow</a>
+        <a href="body2_room.html">Shadow</a>
+    <div class='author'>
+        A Book by Junichiro Tanizaki
+    </div>
         
     </body>
 </html>
