--- a/studio/p2/body2_room.html
+++ b/studio/p2/body2_room.html
@@ -9,11 +9,49 @@
         <link rel="stylesheet" href="css/font.css">
     </head>
     <body>
-
-
-
-
-        <div>And so it has come to be that the beauty of a Japanese room depends on a variation of shadows, heavy shadows against light shadows-it has nothing else. Westerners are amazed at the simplicity of Japanese rooms, perceiving in them no more than ashen walls bereft of ornament. Their reaction is understandable, but it betrays a failure to comprehend the mystery of shadows. Out beyond the sitting room, which the rays of the sun can at best but barely reach, we extend the eaves or build on a veranda, putting the sunlight at still greater a remove. The light from the garden steals in but dimly through paper-paneled doors, and it is precisely this indirect light that makes for us the charm of a room. We do our walls in neutral colors so that the sad, fragile, dying rays can sink into absolute repose. The storehouse, kitchen, hallways, and such may have a glossy finish, but the walls of the sitting room will almost always be of day textured with fine sand. A luster here would destroy the soft fragile beauty of the feeble light. We delight in the mere sight of the delicate glow of fading rays clinging to the surface of a dusky wall, there to live out what little life remains to them. We never tire of the sight, for to us this pale glow and these dim shadows far surpass any ornament. And so, as we must if we are not to disturb the glow, we finish the walls with sand in a single neutral color. The hue may differ from room to room, but the degree of difference will be ever so slight; not so much a difference in color as in shade, a difference that will seem to exist only in the mood of the viewer. And from these delicate differences in the hue of the walls, the shadows in each room take on a tinge peculiarly their own.
+        <div class="wall">And so it has come to be that the beauty of a Japanese room depends on a variation of shadows, 
+            heavy shadows against light shadows-it has nothing else. Westerners are amazed at the simplicity of Japanese rooms, 
+            perceiving in them no more than ashen walls bereft of ornament. Their reaction is understandable, 
+            but it betrays a failure to <span class="hole">comprehend the mystery of shadows </span>. Out beyond the sitting room, 
+            which the <span class="hole">rays of the sun</span> can at best but barely reach, we extend the eaves or build on a veranda, 
+            putting the sunlight at still greater a remove. The <span class="hole">light from the garden</span> steals in but dimly through paper-paneled doors, 
+            and it is precisely this <span class="hole">light that makes for us the charm of a room</span>. We do our walls in neutral colors so that the sad, fragile, 
+            dying rays can sink into absolute repose. 
+            The storehouse, kitchen, hallways, and such may have a glossy finish, but the walls of the sitting room will almost always be of day textured with fine sand. 
+            <span class="hole"> A luster here would destroy the soft fragile beauty of the feeble light. </span>
+            We delight in the mere sight of the delicate glow of fading rays clinging to the surface of a dusky wall, there to live out what little life remains to them. 
+            We never tire of the sight, for to us this pale glow and these dim shadows far surpass any ornament. 
+            And so, as we must if we are not to disturb the glow, we finish the walls with sand in a single neutral color. 
+            The hue may differ from room to room, but the degree of difference will be ever so slight; 
+            not so much a difference in color as in shade, a difference that will seem to exist only in the mood of the viewer. 
+            And from these delicate differences in the hue of the walls, the<span class="hole"> shadows in each room take on a tinge peculiarly their own. </span>
         </div>
+        <div class="door">
+            <a href="body3_alcove.html">Alcove <br></a>
+            <a href="body5_inkwash.html">Inkwash <br> painting <br></a>
+            <a href="body6_gold.html">Gold leaf <br></a>
+        </div>
+        <div class="floor">And so it has come to be that <span class="light">the beauty of a Japanese room</span> depends on a variation of shadows, 
+            heavy shadows against light shadows-it has nothing else. Westerners are amazed at the simplicity of Japanese rooms, 
+            perceiving in them no more than ashen walls bereft of ornament. Their reaction is understandable, 
+            but it betrays a failure to <span class="light">comprehend the mystery of shadows </span>. Out beyond the sitting room, 
+            which the <span class="light">rays of the sun</span> can at best but barely reach, we extend the eaves or build on a veranda, 
+            putting the sunlight at still greater a remove. The <span class="light">light from the garden</span> steals in but dimly through paper-paneled doors, 
+            and it is precisely this <span class="light">light that makes for us the charm of a room</span>. We do our walls in neutral colors so that the sad, fragile, 
+            dying rays can sink into absolute repose. 
+            The storehouse, kitchen, hallways, and such may have a glossy finish, but the walls of the sitting room will almost always be of day textured with fine sand. 
+            <span class="light"> A luster here would destroy the soft fragile beauty of the feeble light. </span>
+            We delight in the mere sight of the delicate glow of fading rays clinging to the surface of a dusky wall, there to live out what little life remains to them. 
+            We never tire of the sight, for to us this pale glow and these dim shadows far surpass any ornament. 
+            And so, as we must if we are not to disturb the glow, we finish the walls with sand in a single neutral color. 
+            The hue may differ from room to room, but the degree of difference will be ever so slight; 
+            not so much a difference in color as in shade, a difference that will seem to exist only in the mood of the viewer. 
+            And from these delicate differences in the hue of the walls, the<span class="light"> shadows in each room take on a tinge peculiarly their own. </span>       
+        </div>
+
+
+       
+
+        
     </body>
 </html>
