--- a/studio/p2/body3_alcove.html
+++ b/studio/p2/body3_alcove.html
@@ -9,8 +9,36 @@
         <link rel="stylesheet" href="css/font.css">
     </head>
     <body>
-
-        <div>Of course the Japanese room does have its picture alcove, and in it a hanging scroll and a flower arrangement. But the scroll and the flowers serve not as ornament but rather to give depth to the shadows. We value a scroll above all for the way it blends with the walls of the alcove, and thus we consider the mounting quite as important as the calligraphy or painting. Even the greatest masterpiece will lose its worth as a scroll if it fails to blend with the alcove, while a work of no particular distinction may blend beautifully with the room and set off to unexpected advantage both itself and its surroundings. Wherein lies the power of an otherwise ordinary work to produce such an effect? Most often the paper, the ink, the fabric of the mounting will possess a certain look of antiquity, and this look of antiquity will strike just the right balance with the darkness of the alcove and room.
+        <div class="wall">Of course the Japanese room does have its picture alcove, 
+            and in it a hanging scroll and a flower arrangement. 
+            <span class="hole">But the scroll and the flowers serve not as ornament  </span>
+            but rather to give depth to the shadows. We value a scroll above all for the way 
+            it blends with the walls of the alcove, and thus we consider the mounting quite 
+            as important as the calligraphy or painting. Even the greatest masterpiece 
+            will lose its worth as a scroll if it fails to blend with the alcove, 
+            while a work of no particular distinction may blend beautifully with the room 
+            and set off to unexpected advantage both itself and its surroundings. Wherein 
+            lies the power of an otherwise ordinary work to produce such an effect? Most often the paper, 
+            <span class="hole">the ink, the fabric</span> of the mounting will possess a certain look of antiquity, and this look of 
+            antiquity will strike just the <span class="hole">the ink, the fabric</span>right balance with the darkness of the alcove and room.
+        </div>
+        <div class="door">
+            <a href="body2_room.html">Shadow <br></a>
+            <a href="body5_inkwash.html">Inkwash <br> painting <br></a>
+            <a href="body6_gold.html">Gold leaf <br></a>
+        </div>
+        <div class="floor">Of course the Japanese room does have its picture alcove, 
+            and in it a hanging scroll and a flower arrangement. 
+            <span class="light">But the scroll and the flowers serve not as ornament  </span>
+            but rather to give depth to the shadows. We value a scroll above all for the way 
+            it blends with the walls of the alcove, and thus we consider the mounting quite 
+            as important as <span class="light">the calligraphy</span> or painting. Even the greatest masterpiece 
+            will lose its worth as a scroll if it fails to blend with the alcove, 
+            while a work of no particular distinction may blend beautifully with the room 
+            and set off to unexpected advantage both itself and its surroundings. Wherein 
+            lies the power of an otherwise ordinary work to produce such an effect? Most often the paper, 
+            <span class="light">the ink, the fabric</span> of the mounting will possess a certain look of antiquity, and this look of 
+            antiquity will strike just the <span class="light">the ink, the fabric</span>right balance with the darkness of the alcove and room.
         </div>
     </body>
 </html>
