--- a/studio/p3/index.html
+++ b/studio/p3/index.html
@@ -11,12 +11,31 @@
         <link rel="stylesheet" href="css/font.css">
     </head>
     <body>
-        <h1>Music Collection</h1>
 
-        <div class="container"></div>
-        <div id="h1"></div>
-        <div id="singer"></div>
-        <div id="img"></div>
+
+        <div class="container">
+            <div class="filter">
+                <h2>MUSIC <br> COLLECTION</h2>
+                <div class="working">Working</div>
+                <br>
+                <div class="playing">Playing <br> games</div>
+                <br>
+                <div class="sleeping">Sleeping</div>
+                <br>
+                <div class="walking">Walking</div>
+                <br>
+                <div class="alone">Staying <br> alone</div>
+                <br>
+                <div class="reset">RESET</div>
+                <br>
+            </div>
+        </div>
+
+           
+     
+
+
+  
 
         <script type="text/javascript" src="airtable.browser.js"></script>
         <script type="text/javascript" src="main.js"></script>
