--- a/p9_uncommon_collection/index.html
+++ b/p9_uncommon_collection/index.html
@@ -11,7 +11,10 @@
         <link rel="stylesheet" href="css/font.css">
     </head>
     <body>
-        <h1>Uncommon Collection</h1>
+        <h2>Blue Animals</h2>
+        <h3>a collection of blue colored organisms</h3>
+        <div class="container">
+        </div>
         <script type="text/javascript" src="airtable.browser.js" defer></script>
         <script type="text/javascript" src="main.js" defer></script>
 
