--- a/studio/p4/index.html
+++ b/studio/p4/index.html
@@ -13,8 +13,21 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
-        <div id="result">Type to create your own snow scene:</div>
-       
+        <div id="result"></div>
+        <br>
+
+        <input type="text" id="input">
+        <!-- <img class="decoration" src="image/1.jpg">
+        <img class="decoration" src="image/2.jpg">
+        <img class="decoration" src="image/3.jpg">
+        <img class="decoration" src="image/4.jpg">
+        <img class="decoration" src="image/5.jpg">
+        <img class="decoration" src="image/6.jpg">
+        <img class="decoration" src="image/7.jpg">
+        <img class="decoration" src="image/8.jpg">
+        <img class="decoration" src="image/9.jpg">
+        <img class="decoration" src="image/10.jpg">
+        <img class="decoration" src="image/11.jpg"> -->
         <script src="main.js" async defer></script>
     </body>
 </html>
